--- a/style/cssplgrstyle.css
+++ b/style/cssplgrstyle.css
@@ -51,7 +51,7 @@ body{
 /*banner style*/
 #main_banner{
     padding-top: 40px;
-    background-image: url("images/pexels-photo-355770.jpeg");
+    background-image: url("../images/pexels-photo-355770.jpeg");
     background-size: cover;
     height: 300px;
     background-position-y: 100%;
