--- a/style/filevewstyle.css
+++ b/style/filevewstyle.css
@@ -34,39 +34,44 @@ tr{
 
 
 /* Popup container */
+
 .upload {
-    color:red;
+    /*color:red;*/
     position: relative;
     display: inline-block;
     cursor: pointer;
 }
-
+#uploadinput, #uploadbutt{
+    display: block;
+}
 /* The actual popup (appears on top) */
 .upload .uploadtext {
     visibility: hidden;
-    width: 160px;
-    background-color: #555;
+    width: 300px;
+    height: 70px;
+    background-color: #ffd69e;
     color: #fff;
     text-align: center;
     border-radius: 6px;
+    border: solid 1px black;
     padding: 8px 0;
     position: absolute;
     z-index: 1;
     bottom: 125%;
     left: 50%;
-    margin-left: -80px;
+    /*margin-left: 180px;*/
 }
 
 /* Popup arrow */
 .upload .uploadtext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
+    /*content: "";*/
+    /*position: absolute;*/
+    /*top: 100%;*/
+    /*left: 50%;*/
+    /*margin-left: -5px;*/
+    /*border-width: 5px;*/
+    /*border-style: solid;*/
+    /*border-color: #555 transparent transparent transparent;*/
 }
 
 /* Toggle this class when clicking on the popup container (hide and show the popup) */
