async upload preparation

--- a/style/filevewstyle.css
+++ b/style/filevewstyle.css
@@ -77,7 +77,7 @@ tr{
     visibility: hidden;
     width: 200px;
     height: 70px;
-    background-color: #c3cdcf;
+    background-color: #f1f8fa;
     color: #000000;
     text-align: center;
     border-radius: 6px;
