--- a/style/filevewstyle.css
+++ b/style/filevewstyle.css
@@ -57,7 +57,6 @@ tr{
     width: 100%;
     margin:5px;
     font-size: 10px;
-
 }
 #buttcont{
     position: absolute;
@@ -110,7 +109,9 @@ tr{
     /*border-color: #555 transparent transparent transparent;*/
 }
 
+#uploaddialbutt{
 
+}
 
 #clseupload{
     position: absolute;
